# ttyleport

./: CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile  quicktest.tmux
docs/plans/: 2026-02-15-daemon-mode-design.md  2026-02-15-mvp-design.md  2026-02-15-mvp-implementation.md  2026-02-15-persistent-sessions-design.md
src/: client.rs  connect.rs  daemon.rs  lib.rs  main.rs  protocol.rs  security.rs  server.rs
tests/: daemon_test.rs  e2e_test.rs  protocol_test.rs
