[package]
name = "ttyleport"
version = "0.1.0"
edition = "2024"

[lib]
name = "ttyleport"
path = "src/lib.rs"

[[bin]]
name = "ttyleport"
path = "src/main.rs"

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
futures-util = { version = "0.3", features = ["sink"] }
libc = "0.2"
nix = { version = "0.29", features = ["term", "process", "signal", "fs"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
