[package]
name = "gritty"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Persistent TTY sessions over Unix domain sockets"

[lib]
name = "gritty"
path = "src/lib.rs"

[[bin]]
name = "gritty"
path = "src/main.rs"

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
futures-util = { version = "0.3", features = ["sink"] }
libc = "0.2"
nix = { version = "0.29", features = ["term", "process", "signal", "fs"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
